--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Connecting up Google Cardboard to web APIs</title>
+    <title>VR with ThreeJS</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <style>
@@ -51,7 +51,7 @@
 
       function init() {
         scene = new THREE.Scene();
-        camera = new THREE.PerspectiveCamera(90, window.innerWidth / window.innerHeight, 0.001, 700);
+        camera = new THREE.PerspectiveCamera(90, 1, 0.001, 700);
         camera.position.set(0, 15, 0);
         scene.add(camera);
 
@@ -114,7 +114,7 @@
         var geometry = new THREE.PlaneBufferGeometry(1000, 1000);
 
         var floor = new THREE.Mesh(geometry, floorMaterial);
-        floor.rotation.x = -Math.PI / 2;
+        floor.rotation.x = - Math.PI / 2;
         scene.add(floor);
 
         var particleTexture = THREE.ImageUtils.loadTexture('textures/particle.png'),
@@ -137,8 +137,6 @@
         particles.position.y = 70;
         scene.add(particles);
 
-      //  adjustToWeatherConditions();
-
         clock = new THREE.Clock();
 
         animate();
@@ -147,19 +145,9 @@
 
       function animate() {
         var elapsedSeconds = clock.getElapsedTime(),
-            particleRotationDirection = particleRotationDeg <= 180 ? -1 : 1;
+            particleRotationDirection = 1;
 
         particles.rotation.y = elapsedSeconds * particleRotationSpeed * particleRotationDirection;
-        
-        // We check if the color range has changed, if so, we'll change the colours
-        if (lastColorRange[0] != currentColorRange[0] && lastColorRange[1] != currentColorRange[1]) {
-
-          for (var i = 0; i < totalParticles; i++) {
-            particles.children[i].material.color.setHSL(currentColorRange[0], currentColorRange[1], (Math.random() * (0.7 - 0.2) + 0.2));
-          }
-
-          lastColorRange = currentColorRange;
-        }
 
         requestAnimationFrame(animate);
 
